some align complains from Paul to fix the toggle buttons (#1070)

--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/complex-question-page/rof-complex-question-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/complex-question-page/rof-complex-question-page.component.scss
@@ -26,6 +26,7 @@
   height: fit-content;
   .flex-button{
     white-space: normal;
+    align-items: center;
   }
 }
 
