--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
@@ -315,6 +315,7 @@
 }
 
 .question-mark{
+  vertical-align: baseline;
   color:#548ADB;
   margin-right: 8px;
 }
