--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.scss
@@ -4,7 +4,5 @@
     padding: 0 48px;
 }
 .rof-button-container{
-    .rof-button{
-        width: 125px;
-    }
+    width: calc(100% - 96px);
 }
